Fixed alignment issue on query section

--- a/src/scss/base/scaffolding.scss
+++ b/src/scss/base/scaffolding.scss
@@ -462,7 +462,7 @@ img {
     box-shadow: none;
   }
  .query-section-table tbody td{
-  padding: 6px 2px 0px 0px !important;;
+  padding: 11px 2px 0px 0px !important;
   vertical-align: middle;
  }
 
@@ -529,8 +529,8 @@ button.btn.btn-primary.account__btn:focus, button.btn.btn-primary.account__btn:a
 }
 
 .help-block{
- //2 top: 70px;
   position: absolute;
+  margin: -2px 0 10px 0px
 }
 
 
